k8s/5-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: scores
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: flask-app
